Fixed footer being offscreen when it shouldn't

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
     height: 100%;
     margin: 0;
     padding-top: 80px;
+    box-sizing: border-box;
     background: #e7ca8c;
 }
 section h2 {
